fix: flex wrap card footer

--- a/common/components/Card/CardFooter/CardFooter.module.scss
+++ b/common/components/Card/CardFooter/CardFooter.module.scss
@@ -2,5 +2,6 @@
   padding: 0 16px 16px;
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
   gap: 8px;
 }
